@@ -658,8 +658,8 @@ scn_zone_t *scan_zone_init(htable_t *nodes) {
 		pzone->found_src = false;
 
 		/* init zone tables */
-		pzone->objects = hash_create_simple(512); /* XXX autogrow ? */
-		pzone->targets = hash_create_simple(256); /* XXX autogrow ? */
+		pzone->objects = hash_create_simple(1024); /* XXX autogrow ? */
+		pzone->targets = hash_create_simple(512); /* XXX autogrow ? */
 		pzone->libraries = hash_create(16, false, NULL, NULL, (void (*)(void *)) lib_cell_destroy); /* library cells */
 		pzone->h_checks = hash_create(128, false, NULL, NULL, (void (*)(void *)) destroy_chk_cell); /* XXX can do better :) */
 		pzone->l_checks = hash_create(128, false, NULL, NULL, (void (*)(void *)) destroy_chk_cell); /* XXX can do better :) */
@@ -2302,6 +2302,7 @@ bool gen_objects(scn_zone_t *psz) {
 #ifdef PMKSCAN_DEBUG
 		debugf("score of '%s' = %d", phk->keys[i], pnode->score);
 #endif /* PMKSCAN_DEBUG */
+		psc_log(NULL, "\tScore of '%s' = %d\n", phk->keys[i], pnode->score);
 
 		/*
 			if we got a node with a score of 0 then it should
@@ -2312,7 +2313,7 @@ bool gen_objects(scn_zone_t *psz) {
 			strlcpy(buf, pnode->prefix, sizeof(buf));
 			strlcat(buf, OBJ_SUFFIX, sizeof(buf));
 
-			psc_log(NULL, "\tProcessing '%s'\n", buf);
+			psc_log(NULL, "\tAdding node '%s' linked to '%s' into object list\n", buf, pnode->fname);
 
 			/* add object reference */
 			if (hash_update_dup(psz->objects, buf, pnode->fname) == false) {
@@ -2320,6 +2321,8 @@ bool gen_objects(scn_zone_t *psz) {
 				errorf("failed to update '%s' value with '%s'.", buf, pnode->fname);
 				return false;
 			}
+
+			psc_log(NULL, "\tProcessing '%s'\n", buf);
 
 			/* set object name */
 			pnode->obj_name = strdup(buf);
@@ -2348,6 +2351,7 @@ bool gen_objects(scn_zone_t *psz) {
 #ifdef PMKSCAN_DEBUG
 					debugf("adding object link '%s' dependency to node '%s'", pnode->obj_name, pn->fname);
 #endif /* PMKSCAN_DEBUG */
+					psc_log(NULL, "\t\tAdding object link '%s' dependency to node '%s'", pnode->obj_name, pn->fname);
 
 					/* and set object link if common declarator is found */
 					if (da_push(pn->obj_links, strdup(pnode->obj_name)) == false) {
@@ -2586,15 +2590,14 @@ bool gen_lib_targets(scn_zone_t *psz) {
 			/* get source name name */
 			srcname = da_idx(plc->src_list, j);
 
+			/* fetch source node */
 			pnode = hash_get(psz->nodes, srcname);
 			if (pnode == NULL) {
 				psc_log("cannot find node '%s'.\n", NULL, srcname);
 				return false;
 			}
 
-			/* build and store label name */
-			pnode->label = strdup(plc->lib_label);
-
+			/* push object name of source file into dependencies */
 			if (da_push(plc->obj_deps, strdup(pnode->obj_name)) == false) {
 				/* err msg */
 				return false;
@@ -5383,7 +5386,7 @@ bool parse_zone_opts(prs_cmn_t *pcmn, htable_t *pht, htable_t *libs) {
 
 
 	/* init of nodes table */
-	tnodes = hash_create(512, true, NULL, NULL, (void (*)(void *))scan_node_destroy);
+	tnodes = hash_create(2048, true, NULL, NULL, (void (*)(void *))scan_node_destroy);
 	if (tnodes == NULL) {
 		errorf("unabe to create hash table for nodes");
 		return false;
